--- a/jQuery/1-1/index.html
+++ b/jQuery/1-1/index.html
@@ -7,5 +7,6 @@
     <title>jQuery 1-1</title>
   </head>
   <body></body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="main.js"></script>
 </html>
