--- a/jQuery/1-6/index.html
+++ b/jQuery/1-6/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>jQuery 1-6</title>
   </head>
-  <body></body>
+  <body>
+    <ul id="navBar">
+      <li class="navItem"><span>Home</span></li>
+      <li class="navItem">
+        <span>Pages</span>
+        <ul class="dropdown d-none" id="pagesDropdown">
+          <li class="dropdownItem"><span>Page Number One</span></li>
+          <li class="dropdownItem"><span>Page Number Two</span></li>
+          <li class="dropdownItem"><span>Page Number Three</span></li>
+        </ul>
+      </li>
+      <li class="navItem">
+        <span>Links</span>
+        <ul class="dropdown d-none" id="linksDropdown">
+          <li class="dropdownItem"><span>Link Number 1</span></li>
+          <li class="dropdownItem"><span>Link Number 2</span></li>
+          <li class="dropdownItem"><span>Link Number 3</span></li>
+        </ul>
+      </li>
+    </ul>
+  </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="main.js"></script>
 </html>
