--- a/bootStrap/index.html
+++ b/bootStrap/index.html
@@ -58,13 +58,14 @@
               aria-label="Search"
               onkeyup="filterUsers(this)"
             />
-            <button class="btn btn-outline-warning" type="submit">
+            <button class="btn btn-outline-warning" type="button">
               Search
             </button>
           </form>
         </div>
       </div>
     </nav>
+
     <!-- start: users list container -->
     <div class="container-lg my-4">
       <div class="row gy-4" id="usersList"></div>
