--- a/bootStrap/index.html
+++ b/bootStrap/index.html
@@ -12,7 +12,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-    <title>usersList</title>
+    <title>bootstrap 2-1</title>
   </head>
   <body class="bg-secondary">
     <nav class="navbar navbar-expand-lg bg-dark">
